# FHE-Age-Stats

./: .env  Cargo.toml  README.md
migrations/: 001_initial_schema.sql
src/: crypto.rs  db.rs  error.rs  handlers.rs  main.rs  models.rs
